# src-connectors

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: index.md  spark.md  sqlserver.md
examples/sqlserver/: 01_list_output.py  02_array_output.py  03_dataframe_output.py  04_stream_list.py  05_stream_array.py  06_stream_dataframe.py  07_error_handling.py
examples/src_spark/: 01_iceberg_read.py  02_iceberg_stream.py  03_custom_overwrites.py  04_multi_catalog_read.py  05_oracle_read.py  06_oracle_wirte.py  07_oracle_write_with_monitor.py
examples/trino/: 01_test_query.py
scripts/init/: setup_env.sh
src_connectors/: __init__.py
src_connectors/exceptions/: __init__.py  base.py  spark.py
src_connectors/src_base/: connector.py
src_connectors/src_spark/: __init__.py  connector.py
src_connectors/src_spark/configs/: __init__.py  base.py  core_config.py  iceberg.py  jdbc.py
src_connectors/src_spark/configs/adapter/: iceberg.py  jdbc.py  oracle.py
src_connectors/src_spark/configs/base/: base.py
src_connectors/src_spark/configs/core/: core_config.py
src_connectors/src_sqlserver/: __init__.py  connector.py
src_connectors/src_trino/: connector.py
src_connectors/utils/: __init__.py  dependency.py  spark_monitor.py
variables/: helper.py  spark.py  sqlserver.py  trino.py
