[project]
name = "src-connectors"
version = "0.1.0"
description = "High-performance data connectors for SQL Server, Spark, Iceberg, and JDBC."
authors = [
    { name = "canh.ld" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "requests>=2.33.1,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "tqdm>=4.66.0,<5.0.0",

    # Data handling
    "pandas>=2.3.0,<3.0.0",
    "pyarrow>=21.0.0,<22.0.0",

    # Validation / config
    "pydantic>=2.11.0,<3.0.0",

    # Retry / resiliency
    "tenacity>=9.1.0,<10.0.0",

    # Logging
    "structlog>=25.4.0,<26.0.0"
]

[tool.poetry]
package-mode = true
packages = [
    { include = "src_connectors" },
    { include = "variables" },
    { include = "common" }
]

[project.optional-dependencies]

postgres = [
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0"
]

trino = [
    "trino>=0.336.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0"
]

sqlserver = [
    "pyodbc==5.3.0",
    "sqlalchemy==2.0.49"
]

oracle = [
    "oracledb>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.0,<3.0.0"
]

spark = [
    "pyspark>=3.5.0,<4.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0"
]

dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=6.2.0,<7.0.0",
    "ruff>=0.12.0,<1.0.0",
    "mypy>=1.17.0,<2.0.0",
    "pre-commit>=4.3.0,<5.0.0"
]

docs = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.6.0,<10.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"